tests/errors/type_check/error_span/accumulate_across_functions.sim

        fn f() {
            x: i64;
            entry:
            x = true;
            return
        }
        fn g() {
            y: i64;
            entry:
            y = true;
            return
        }
        